# brainiac

./: .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
skill/: SKILL.md
skill/examples/: customer_support_context_prompt.md  new_product_prompt.md  update_variant_prompt.md
skill/workflows/: export.md  ingest_product.md  init.md  update_product.md  validate.md
skills/brainiac/: SKILL.md
skills/product-kb-accumulate/: SKILL.md
template/: .env.example  ACCESS.md  AGENT.md  README.md  kb.py  pyproject.toml
template/api/: main.py
template/api/routers/: context.py  media.py  products.py  search.py  sources.py  variants.py
template/products/_template/: care-guide.md  comparison.md  compliance.md  faq.md  objections.md  product.yaml  source-notes.md  variants.yaml
template/products/example-orthopedic-dog-bed/: care-guide.md  comparison.md  compliance.md  faq.md  golden-qa.yaml  objections.md  product.yaml  source-notes.md  variants.yaml
template/products/example-orthopedic-dog-bed/media/: media.yaml
template/products/example-orthopedic-dog-bed/media/transcripts/: washing-demo.md
template/schemas/: golden-qa.schema.json  media.schema.json  product.schema.json  source.schema.json  variants.schema.json
template/scripts/: build_index.py  check_conflicts.py  export_shopify.py  export_support_context.py  ingest_sources.py  new_product.py  new_variant.py  validate.py
template/tests/: test_context_api.py  test_exports.py  test_ingest.py  test_validate.py  test_variants.py
(+10 files in other folders)
