[project]
name = "product-kb-template"
version = "0.1.0"
description = "Local-first ecommerce product knowledge repository."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "pyyaml>=6",
  "jsonschema>=4",
  "uvicorn>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
